<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.musasyihab.footballclub2.ui.view.ErrorPageView
        android:id="@+id/matchDetailError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ProgressBar
        android:id="@+id/matchDetailLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/matchDetailLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/matchDetailHomeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/matchDetailVersus"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/matchDetailHomeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_error"/>

            <TextView
                android:id="@+id/matchDetailHomeClub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Liverpool"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"/>

            <TextView
                android:id="@+id/matchDetailHomeScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3"
                android:textStyle="bold"
                android:textSize="24sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/matchDetailVersus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/matchDetailHomeLayout"
            android:text="@string/vs"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"/>

        <LinearLayout
            android:id="@+id/matchDetailAwayLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/matchDetailVersus"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/matchDetailAwayIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_error"/>

            <TextView
                android:id="@+id/matchDetailAwayClub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Chelsea"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"/>

            <TextView
                android:id="@+id/matchDetailAwayScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1"
                android:textStyle="bold"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/matchDetailDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/matchDetailHomeLayout"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/background">

            <TextView
                android:id="@+id/matchDetailLeague"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="English Premier League"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:fontFamily="sans-serif-condensed"/>

            <TextView
                android:id="@+id/matchDetailDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="Friday, November 23rd, 2018"
                android:textSize="14sp"
                android:fontFamily="sans-serif-condensed"/>

            <TextView
                android:id="@+id/matchDetailTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="21:00"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed"/>

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/matchDetailDataLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/matchDetailDateTime"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/statistics"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@color/darkGrey"/>

                <LinearLayout
                    android:id="@+id/matchDetailGoalsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@color/border">

                    <TextView
                        android:id="@+id/matchDetailGoalsHome"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="Salah (17)\nFirmino(57)\nMane(90+1)"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goals"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:fontFamily="sans-serif-condensed"/>

                    <TextView
                        android:id="@+id/matchDetailGoalsAway"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="Hazard (84)"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/matchDetailShotsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@color/border">

                    <TextView
                        android:id="@+id/matchDetailShotsHome"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="12"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shots"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:fontFamily="sans-serif-condensed"/>

                    <TextView
                        android:id="@+id/matchDetailShotsAway"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="5"
                        android:gravity="center"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/lineup"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@color/darkGrey"/>

                <LinearLayout
                    android:id="@+id/matchDetailGoalkeeperLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@color/border">

                    <TextView
                        android:id="@+id/matchDetailGoalkeeperHome"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="Alisson"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goalkeeper"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:fontFamily="sans-serif-condensed"/>

                    <TextView
                        android:id="@+id/matchDetailGoalkeeperAway"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="Willy Caballero"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/matchDetailDefenseLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@color/border">

                    <TextView
                        android:id="@+id/matchDetailDefenseHome"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="Mamadou Sakho\nEmre Can\nMartin Skrtel"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/defense"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:fontFamily="sans-serif-condensed"/>

                    <TextView
                        android:id="@+id/matchDetailDefenseAway"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="Cesar Azpilicueta\nAntonio Ruediger\nDavid Luiz\nMarcos Alonso"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/matchDetailMidfieldLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@color/border">

                    <TextView
                        android:id="@+id/matchDetailMidfieldHome"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="Javier Manquillo\nJordan Henderson\nLucas Leiva\nAlberto Moreno"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/midfield"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:fontFamily="sans-serif-condensed"/>

                    <TextView
                        android:id="@+id/matchDetailMidfieldAway"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="N'Golo Kante\nJorginho\nRoss Barkley"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/matchDetailForwardLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@color/border">

                    <TextView
                        android:id="@+id/matchDetailForwardHome"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="Philippe Coutinho\nRaheem Sterling\nAdam Lallana"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forward"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:fontFamily="sans-serif-condensed"/>

                    <TextView
                        android:id="@+id/matchDetailForwardAway"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="Willian\nAlvaro Morata\nEden Hazard"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/matchDetailSubstitutesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@color/border">

                    <TextView
                        android:id="@+id/matchDetailSubstitutesHome"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="Kolo Toure\nLazar Markovic\nSteven Gerrard\nRickie Lambert\nFabio Borini\nDaniel Ward\nMario Balotelli"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/substitutes"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:fontFamily="sans-serif-condensed"/>

                    <TextView
                        android:id="@+id/matchDetailSubstitutesAway"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        tools:text="Wilfredo Caballero\nAndreas Christensen\nDavide Zappacosta\nCesc Fabregas\nRoss Barkley\nPedro Rodriguez\nOlivier Giroud"
                        android:gravity="center"/>

                </LinearLayout>


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>